# autonomous-hedge-fund

./: .env.example  .gitignore  CONTRIBUTION.md  PAPER.md  README.md  RESEARCH_LOG.md  ROADMAP.md  WEEKLY_LOG.md  brazilbench_mistral_results.json  brazilbench_mistral_test.py  determinism_results.json  determinism_test.py  github-metadata.md  main.py  pyproject.toml  run_backtest.py
.github/workflows/: tests.yml
benchmark/results/baselines/: ew_returns.csv  per_cell_returns.csv
benchmark/results/random_n100/: per_seed_returns.csv  summary.csv
docs/: ARCHITECTURE.md  brazilbench.tex  paper_ew_portfolio_baselines.tex  paper_random_n100.tex
learning/journal/: 2026-04-26-plano-semana.md
scripts/: regime_lib.py  run_ew_portfolio.py  run_random_n100.py  smoke_macro_agent.py
tests/: test_api_smoke.py  test_backtest_metrics.py  test_fingpt_analyst.py  test_indicator_fallback.py  test_kronos_analyst.py  test_macro_graph_construction.py  test_model_validation.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: macro_economist.py  market_analyst.py  social_media_analyst.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  fingpt_tool.py  kronos_tool.py  macro_tools.py
tradingagents/backtest/: __init__.py  agent_integration.py  baselines.py  metrics.py  report.py  runner.py
tradingagents/dataflows/: fingpt_analyst.py  indicator_fallback.py  kronos_analyst.py  stockstats_utils.py  y_finance.py
tradingagents/graph/: setup.py  trading_graph.py
tradingagents/llm_clients/: model_catalog.py
