[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-hedge-fund"
version = "0.2.3"
description = "Multi-agent LLM trading system with Macro Economist Agent for emerging market research"
readme = "README.md"
keywords = ["trading", "multi-agent", "llm", "emerging-markets", "macro", "brazil"]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "pandas-ta",
    "torch>=2.11.0",
    "huggingface-hub>=1.11.0",
    "einops>=0.8.2",
    "safetensors>=0.7.0",
    "python-dotenv>=1.1.0",
    "brazilfi>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/RAFAELDCOELHO/autonomous-hedge-fund"

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
